--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React Storybook inspired by Japanese sumi art style",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "./node_modules/.bin/eslint stories/**/*.js src/**/*.js",
     "start": "start-storybook -p 6006",
     "build": "build-storybook"
   },
@@ -25,14 +25,21 @@
   },
   "homepage": "https://github.com/elishaterada/sumi#readme",
   "dependencies": {
+    "@storybook/addons": "^3.3.13",
+    "@storybook/addon-actions": "^3.3.13",
+    "@storybook/addon-links": "^3.3.13",
+    "@storybook/addon-options": "^3.3.13",
+    "@storybook/react": "^3.3.13",
+    "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
-    "@storybook/react": "^3.3.13",
-    "@storybook/addon-actions": "^3.3.13",
-    "@storybook/addon-links": "^3.3.13",
-    "@storybook/addons": "^3.3.13",
-    "babel-core": "^6.26.0"
+    "babel-core": "^6.26.0",
+    "eslint": "^4.18.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.6.1"
   }
 }
