--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "React Storybook inspired by Japanese sumi art style",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/eslint stories/**/*.js src/**/*.js",
+    "test": "./node_modules/.bin/eslint stories/**/*.js src/**/*.js; jest;",
     "start": "start-storybook -p 6006",
-    "build": "build-storybook"
+    "build": "build-storybook",
+    "create": "node create-new-component.js"
   },
   "repository": {
     "type": "git",
@@ -25,21 +26,34 @@
   },
   "homepage": "https://github.com/elishaterada/sumi#readme",
   "dependencies": {
-    "@storybook/addons": "^3.3.13",
     "@storybook/addon-actions": "^3.3.13",
+    "@storybook/addon-info": "^3.3.13",
     "@storybook/addon-links": "^3.3.13",
     "@storybook/addon-options": "^3.3.13",
+    "@storybook/addons": "^3.3.13",
     "@storybook/react": "^3.3.13",
-    "prop-types": "^15.6.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0"
-  },
-  "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "emotion": "^9.0.1",
     "eslint": "^4.18.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.6.1"
+    "eslint-plugin-react": "^7.6.1",
+    "fs-extra": "^5.0.0",
+    "jest": "^22.3.0",
+    "jest-emotion": "^9.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-test-renderer": "^16.2.0",
+    "replace-in-file": "^3.1.1"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss)$": "<rootDir>/__mocks__/styleMock.js"
+    }
   }
 }
