--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,16 @@
   "extends": "airbnb",
   "rules": {
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-    "no-debugger": ["error"]
-  }
+    "no-debugger": ["error"],
+    "jsx-a11y/label-has-for": [ 2, {
+      "components": [ "Label" ],
+      "required": {
+        "every": [ "id" ]
+      },
+      "allowChildren": false
+    }]
+  },
+  "plugins": [
+    "jsx-a11y"
+  ]
 }
