--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,20 @@
     "es2015",
     "stage-2"
   ],
-  "plugins": ["transform-react-jsx"],
+  "plugins": [
+    "transform-react-jsx",
+    "emotion"
+  ],
+  "env": {
+    "production": {
+      "plugins": [["emotion", { "hoist": true }]]
+    },
+    "development": {
+      "plugins": [
+        ["emotion", { "sourceMap": true, "autoLabel": true }]
+      ]
+    }
+  },
   "only": [
     "**/*.js",
     "./src/index.js"
